--- a/GeoCalculatorApp/app/src/main/res/layout/activity_main.xml
+++ b/GeoCalculatorApp/app/src/main/res/layout/activity_main.xml
@@ -4,120 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteY="25dp">
+
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar"></include>
 
     <Button
         android:id="@+id/clearButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="364dp"
+        android:layout_marginEnd="180dp"
         android:text="Clear"
-        app:layout_constraintStart_toEndOf="@+id/calculateButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/p2LatField"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/p2LongField"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="165dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="Enter longitude for p2"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/p2LatField"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/p2LatField"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="22dp"
+        android:layout_width="165dp"
+        android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="Enter latitude for p2"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/calculateButton"
-        app:layout_constraintEnd_toStartOf="@+id/p2LongField"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/p1LongField" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/p1LongField"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="165dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Enter longitude for p1"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/p2LongField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/p1LatField"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/p1LatField"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="117dp"
+        android:layout_width="165dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="22dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="Enter latitude for p1"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/distanceLabel"
+        app:layout_constraintBottom_toTopOf="@+id/p2LatField"
         app:layout_constraintEnd_toStartOf="@+id/p1LongField"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/calculateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="15dp"
         android:text="Calculate"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        app:layout_constraintStart_toStartOf="@+id/p2LatField" />
+        app:layout_constraintBottom_toTopOf="@+id/distanceLabel"
+        app:layout_constraintEnd_toStartOf="@+id/clearButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/distanceLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:text="Distance:"
         app:layout_constraintBottom_toTopOf="@+id/bearingLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/p1LatField" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/bearingLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="287dp"
+        android:layout_marginBottom="300dp"
         android:layout_marginStart="16dp"
         android:text="Bearing:"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distanceLabel" />
-
-    <Button
-        android:id="@+id/settingsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="146dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="299dp"
-        android:text="Settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clearButton" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
