--- a/GeoCalculatorApp/app/src/main/res/layout/activity_settings_acitvity.xml
+++ b/GeoCalculatorApp/app/src/main/res/layout/activity_settings_acitvity.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Bearing Units"
+        android:text="@string/bearingUnits"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="23dp"
-        android:text="Distance Units"
+        android:text="@string/distanceUnits"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
