--- a/GeoCalculatorApp/app/src/main/res/menu/menu.xml
+++ b/GeoCalculatorApp/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="never">
     </item>
 </menu>
